--- a/requirements.txt
+++ b/requirements.txt
@@ -1,101 +1,102 @@
-ace_tools==0.0
-annotated-types==0.7.0
-antlr4-python3-runtime==4.9.3
-anyio==4.9.0
-asttokens==3.0.0
-av==14.3.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.2
-contourpy==1.3.0
-ctranslate2==4.6.0
-cycler==0.12.1
-debugpy==1.8.10
-decorator==5.1.1
-executing==2.1.0
-fastapi==0.115.12
-faster-whisper==1.1.1
-filelock==3.18.0
-flatbuffers==25.2.10
-fonttools==4.53.1
-fsspec==2025.3.2
-h11==0.14.0
-huggingface-hub==0.30.2
-humanfriendly==10.0
-idna==3.10
-ipykernel==6.29.5
-ipython==8.30.0
-jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.4.2
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.7
-MarkupSafe==3.0.2
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mpmath==1.3.0
-nest-asyncio==1.6.0
-networkx==3.4.2
-numpy==2.1.1
-omegaconf==2.3.0
-onnxruntime==1.21.0
-packaging==24.1
-pandas==2.2.3
-parso==0.8.4
-pillow==10.4.0
-platformdirs==4.3.6
-prettytable==3.12.0
-prompt_toolkit==3.0.48
-protobuf==6.30.2
-psutil==6.1.0
-pure_eval==0.2.3
-pyasn1==0.6.1
-pycparser==2.22
-pydantic==2.11.3
-pydantic_core==2.33.1
-Pygments==2.18.0
-pyparsing==3.1.4
-pyreadline3==3.5.4
-PySimpleGUI==5.0.7
-python-dateutil==2.9.0.post0
-pytz==2024.2
-pywin32==308
-PyYAML==6.0.2
-pyzmq==26.2.0
-regex==2024.11.6
-requests==2.32.3
-rsa==4.9
-safetensors==0.5.3
-scikit-learn==1.6.0
-scipy==1.14.1
-sentencepiece==0.2.0
-silero-vad==5.1.2
-six==1.16.0
-sniffio==1.3.1
-sounddevice==0.5.1
-soundfile==0.13.1
-stack-data==0.6.3
-starlette==0.46.2
-sympy==1.13.1
-tabulate==0.9.0
-threadpoolctl==3.5.0
-tokenizers==0.21.1
-torch==2.6.0
-torchaudio==2.6.0
-tornado==6.4.2
-tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.51.3
-typing-inspection==0.4.0
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.4.0
-uvicorn==0.34.1
-wcwidth==0.2.13
-websockets==15.0.1
-python-dotenv==1.1.0
+ace_tools
+annotated-types
+antlr4-python3-runtime
+anyio
+asttokens
+av
+certifi
+cffi
+charset-normalizer
+click
+colorama
+coloredlogs
+comm
+contourpy
+ctranslate2
+cycler
+debugpy
+decorator
+executing
+fastapi
+faster-whisper
+filelock
+flatbuffers
+fonttools
+fsspec
+h11
+huggingface-hub
+humanfriendly
+idna
+ipykernel
+ipython
+jedi
+Jinja2
+joblib
+jupyter_client
+jupyter_core
+kiwisolver
+MarkupSafe
+matplotlib
+matplotlib-inline
+mpmath
+nest-asyncio
+networkx
+numpy
+omegaconf
+onnxruntime
+packaging
+pandas
+parso
+pillow
+platformdirs
+prettytable
+prompt_toolkit
+protobuf
+psutil
+pure_eval
+pyasn1
+pycparser
+pydantic
+pydantic_core
+Pygments
+pyparsing
+pyreadline3
+python-dateutil
+pytz
+PyYAML
+pyzmq
+regex
+requests
+rsa
+safetensors
+scikit-learn
+scipy
+sentencepiece
+silero-vad
+six
+sniffio
+sounddevice
+soundfile
+stack-data
+starlette
+sympy
+tabulate
+threadpoolctl
+tokenizers
+torch
+torchaudio
+tornado
+tqdm
+traitlets
+transformers
+typing-inspection
+typing_extensions
+tzdata
+urllib3
+uvicorn
+wcwidth
+websockets
+python-dotenv
+crewai
+bs4
+faiss-cpu
